# BiomniGEM

./: .env  .gitignore  AGENT.md  README.md  check_data_format.py  config.json  download.sh  download_dataset.py  download_model.py  help  pyproject.toml  remove_unknow.py  test.ipynb  test.py
.cursor/rules/: agent-collaboration.mdc
.matplotlib/: fontlist-v390.json
ChatBox/: README.md  apikey  check-status.sh  restart-backend.sh  start.sh  test-setup.sh
ChatBox/backend/: main.py  pyproject.toml  requirements.txt  start.sh
ChatBox/frontend/: package-lock.json  package.json
Docs/: chat-box.md  datasets.md  train.md
Reasoning-Distill/: README.md  pyproject.toml
SynBioCoT/: collect_all.py  framework.md  make_cot.py  make_task.py  make_traces.py  make_val.py  pipe.sh  split.py  tasks.md
SynBioCoT/cell/: view_data.ipynb
SynBioCoT/cell/de/: pipe.sh  template.json
SynBioCoT/cell/dir/: make_qa.py  pipe.sh  template.json
SynBioCoT/prompt/: system.py  tasks.py
SynBioCoT/vc/: bio_instructions_mapping.py  make_biology_instructions.py  pipe.sh
VCDatasets/: DATASET_OVERVIEW.md  requirements.txt
VCDatasets/data_process/: __init__.py  data_download.py  data_process.py
docs/: biology_instructions_analysis.md  paper.md  tasks.md
train/: enhance_traces_data.py  main.py  make_grpo.sh  make_sft.py  make_sft.sh  process.sh  specialize.py  train.sh  train_sft.py  train_test.sh
train/llama-factory/: convert_data.py
train/make_data/: make_dialog.py  make_grpo.sh  make_sft.sh
train/sft/: merge_upload.py  run.sh  tools.py  train.py
(+14 files in other folders)
