[project]
name = "biomnigem"
version = "0.1.0"
description = "Jilin-AI(Jilin University)’s 2025 iGEM Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=4.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "markdown>=3.5.0",
    "requests>=2.31.0",
    "socksio>=1.0.0",
]
