[project]
name = "biomnigem"
version = "0.1.0"
description = "Jilin-AI(Jilin University)’s 2025 iGEM Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.3",
    "gdown>=5.2.0",
    "ipykernel>=7.0.1",
    "litellm>=1.78.6",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "scanpy>=1.11.5",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
    "trl>=0.24.0",
]
