[project]
name = "chatbox-backend"
version = "0.1.0"
description = "ChatBox Backend API using FastAPI and LangChain"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.6.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
